<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btTakePicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/std_height"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/retake_picture"></Button>

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/btTakePicture"
        android:layout_marginTop="@dimen/activity_vertical_margin">

    </ImageView>

    <EditText
        android:id="@+id/etDescription"
        android:layout_below="@id/ivPicture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/std_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:hint="@string/description"></EditText>

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/std_height"
        android:layout_below="@id/etDescription"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/submit"></Button>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btSubmit"
        android:layout_centerInParent="true"/>


</RelativeLayout>